--- a/sections/empirical-evaluation.tex
+++ b/sections/empirical-evaluation.tex
@@ -110,7 +110,7 @@ As mentioned, the aim of this exercise is to provide an objective grounding for 
 	\resizebox{\textwidth}{!}{
 		\input{tables/ranks-symbolic.tex}
 	}
-	\caption{Top-10 ranked users for ranking functions (\ref{eq:rank1}) and (\ref{eq:rank2}), with indication of whether the user is on-topic/off-topic and individual vs association.}
+	\caption{Top-10 users for ranking functions (\ref{eq:rank1}) and (\ref{eq:rank2}), with indication of whether the user is on/off-topic and individual vs associations / professionals.}
 	\label{tab:rank1}
 	\vspace{-30pt}
 \end{table}
