--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -42,7 +42,7 @@
     	We make  the hypothesis that such interesting users can be found within temporally and spatially localised \textit{contexts}, i.e., small but topical fragments of the network containing interactions about social events or campaigns with a significant footprint on Twitter.
     	To explore this hypothesis, we have designed a continuous user profile discovery pipeline that produces an ever-growing dataset of user profiles by harvesting and analysing contexts from the Twitter stream.
     	The profiles dataset includes key network and content-based users metrics, enabling experimentation with user-defined score functions that characterise specific classes of online users.
-        The paper describes the design and implementation of  the pipeline and its empirical evaluation on a case study consisting of healthcare-related campaigns in the UK, showing how it supports experimental operational definitions of online activism. The code is publicly available.
+        The paper describes the design and implementation of  the pipeline and its empirical evaluation on a case study consisting of healthcare-related campaigns in the UK, showing how it supports the operational definitions of online activism, by comparing three experimental ranking functions. The code is publicly available.
     	
     	\keywords{Twitter analytics \and online user discovery \and online activists \and online influencers \and influence theories}
     \end{abstract}
