--- a/tables/ranks-symbolic.tex
+++ b/tables/ranks-symbolic.tex
@@ -21,15 +21,15 @@
 \cline{2-10}
 \multicolumn{1}{l|}{} & \multicolumn{3}{c|}{\textbf{Ranking 1}} & \multicolumn{3}{c|}{\textbf{Ranking 2}} & \multicolumn{3}{c|}{\textbf{Ranking 3}} \\ \hline
 \multicolumn{1}{|c|}{\#} & \textbf{User} & \textbf{On-topic} & \textbf{Individual} & \textbf{User} & \textbf{On-topic} & \textbf{Individual} & \textbf{User} & \textbf{On-topic} & \textbf{Individual} \\ \hline
-\multicolumn{1}{|c|}{1} & homesnutrition & X &  & johnneustadt & X & X & johnneustadt &  & X \\ \hline
+\multicolumn{1}{|c|}{1} & homesnutrition & X &  & johnneustadt & X & X & johnneustadt & X &  \\ \hline
 \multicolumn{1}{|c|}{2} & ficajones & X & X & jo\_millar27 & X & X & solutions777 & X & X \\ \hline
 \multicolumn{1}{|c|}{3} & helenvweaver & X & X & hatchbrenner &  &  & kingste29344921 & X & X \\ \hline
-\multicolumn{1}{|c|}{4} & spriggsnutri & X &  & nchawkes & X & X & daisylu1964 & X &  \\ \hline
+\multicolumn{1}{|c|}{4} & spriggsnutri & X &  & nchawkes & X & X & daisylu1964 &  & X \\ \hline
 \multicolumn{1}{|c|}{5} & critcarelthtr & X &  & moz0373runner & X & X & zakariamarsli & X & X \\ \hline
-\multicolumn{1}{|c|}{6} & danielleroisin\_ & X & X & aimsonhealth & X & X & meowaaaaaa & X &  \\ \hline
-\multicolumn{1}{|c|}{7} & mynameisandyj & X & X & wordsharkv5 &  & X & vecta67 & X &  \\ \hline
+\multicolumn{1}{|c|}{6} & danielleroisin\_ & X & X & aimsonhealth & X & X & meowaaaaaa &  & X \\ \hline
+\multicolumn{1}{|c|}{7} & mynameisandyj & X & X & wordsharkv5 &  & X & vecta67 &  & X \\ \hline
 \multicolumn{1}{|c|}{8} & fionaliu92 & X & X & fullcircle\_play & X &  & cosfordfamily1 & X & X \\ \hline
-\multicolumn{1}{|c|}{9} & ldpartnership & X &  & qsprivatehealth & X &  & hayleycorriganx & X &  \\ \hline
-\multicolumn{1}{|c|}{10} & milaestevam1 &  & X & socialissp &  &  & jhbrasfie & X &  \\ \hline
+\multicolumn{1}{|c|}{9} & ldpartnership & X &  & qsprivatehealth & X &  & hayleycorriganx &  & X \\ \hline
+\multicolumn{1}{|c|}{10} & milaestevam1 &  & X & socialissp &  &  & jhbrasfie &  & X \\ \hline
 
 \end{tabular}
